# axum

./: .env  .gitignore  Cargo.toml
migrations/: 20250510143528_init_schema.sql
src/: main.rs
src/api/: router.rs
src/core/: error.rs  jwt.rs  mod.rs
src/infra/: db.rs
src/migrations/: 0001_init_schema.sql
src/module/: mod.rs
src/module/market_feed/: binance_ws.rs  event_bus.rs  handler.rs  mod.rs  processor.rs  router.rs  state.rs
src/module/user/: command.rs  dto.rs  handler.rs  mod.rs  model.rs  router.rs
